--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ return("<style>
 
 🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 
-`codexplor` offers R functions for explore and monitor a programming project with standardized methods : get immediate insights with text-mining metrics, network analysis & dataviz'. 
+`codexplor` offers R functions for explore and monitor a programming project with standardized methods : get immediate insights with text-mining metrics, network analysis & dataviz'. Get rid of complexity with a broader perspective on the project !
 
 ## Installation
 You can install the development version of codexplor with
@@ -38,62 +38,67 @@ devtools::install_github("clement-LVD/codexplor")
 ```
 
 ## Features
-The default parameters are dedicated to analyze .R codes files. 
+Given a programming project with .R files :
 
-- **Appreciate global complexity of a project with a Citations Network of internal dependencies.** 
-    - Get metrics & dataviz' about the functions defined in the project (e.g. explore global structure or zoom on major internal dependancies^[functions that are called by others functions of the project]).
-- **Assess local complexity with text-Mining metrics.** 
-  - Compute document-level metrics (e.g., files readability)
+- Appreciate global complexity with a ![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Citations Network of internal dependencies&labelColor=black&color=green)
+    - Get network metrics & dataviz' about the functions defined in the project (e.g. explore global structure or zoom on major internal dependancies^[functions that are called by others functions of the project]).
+- *[planned feature]* Assess local complexity with  ![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Text-mining metrics&labelColor=grey&color=yellow)
+  - Get document-level metrics (e.g., files readability)
 - ...
 
-### Example : Citations Network of Documents 
+Planned features : 
 
-1. List the project' files path and/or urls, eventually with ![.](https://img.shields.io/badge/{Scraping}-bold?style=flat&logoColor=black&logoSize=2&label=get-github-raw-filespath()&labelColor=green&color=black)
+![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Reporting&labelColor=orange&color=black)
+![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Network-advanced&labelColor=orange&color=black)
+
+### Example : Explore a Citations Network 
+
+1. List the project' files path and/or urls, eventually with ![.](https://img.shields.io/badge/{Scraping}-bold?style=flat&logoColor=black&logoSize=2&label=get_github_raw_filespath()&labelColor=green&color=black)
 
 
         paths <- codexplor::get_github_raw_filespath(repo = "tidyverse/stringr", pattern = "\\.R")
         #  Return a list of char. => url of .R files from https://raw.githubusercontent.com/ 
 
 
-2. Compute a Citations Network of the functions with   ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get-text-network-from-files()&labelColor=yellow&color=black)
+2. Compute a Citations Network of the functions with   ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=get_text_network_from_files()&labelColor=yellow&color=black)
 
         net <- codexplor::get_text_network_from_files(paths,  regex_to_exclude_files_path = "test-", ignore_match_less_than_nchar = 5)
         # Return a data.frame, edgelist of a citations network
 
-3. Turn it into a directed `igraph`  network with ![1.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get-igraph-from-df()&labelColor=green&color=black)
+3. Turn it into a directed `igraph`  network with ![1.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get_igraph_from_df()&labelColor=green&color=black)
 
         netig <- codexplor::get_igraph_from_df(net) 
 
 5. Optionally zoom on a precise function with 
-![](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=filter-igraph-egonetwork()&labelColor=green&color=black)
+![](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=filter_igraph_egonetwork()&labelColor=green&color=black)
 
-4. Look an interactive dataviz' with `networkD3` : ![](https://img.shields.io/badge/{Dataviz}-bold?style=flat&logoColor=black&logoSize=2&label=get-networkd3-from_igraph()&labelColor=yellow&color=black)
+4. Look an interactive dataviz' with `networkD3` : ![](https://img.shields.io/badge/{Dataviz}-bold?style=flat&logoColor=black&logoSize=2&label=get_networkd3_from_igraph()&labelColor=yellow&color=black)
 
        codexplor::get_networkd3_from_igraph(netig) 
 
 
 ![](man/figures/example_net3d_dataviz.png)
 
-We see what are the most-common local dependancy (`compat-types-check.R`).
+The func' used by others func' are colorized, such as their ingoing links. For ex. we quicky see the most-common local dependancy (i.e. `compat-types-check.R`).
+
+Play with the parameters reveal others infos, e.g., coloring nodes depending on their outdegrees :
+
+     get_networkd3_from_igraph(netig, color_outdeg_instead_of_indeg = T) 
+
+![](man/figures/example_net3d_dataviz2.png)
+
+The func' that used others func' in their code are colorized, such as their outgoing links.
 
 ---
 
-Planned features : 
-![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Text-mining&labelColor=orange&color=black)
-![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Reporting&labelColor=orange&color=black)
-![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Network-advanced&labelColor=orange&color=black)
+There is several useful parameters to take care with. Depending on the languages you have to manage, you'll want to tweak the 'pattern' used for match a function definition.
+
+---
 
 
-## Complete Example 
-    
-⏩ **2. Read the files and get a citations network of func'.**
- Assuming the user provide a list of files paths and/or url, `get_text_network_from_files()` will :
 
-- read the files, trying to extract a first pattern (e.g., defaults parameters will extract R functions names, when a func' is defined within a file). 
-- search for these patterns (functions names by default) in the contents of the files, in order to constitute a Citations Network (a directed type of document network).
-- return the edgelist of the network of *documents*.
- 
 
+<!--
 ⏩ **4. Get an interactive `networkD3` HTML object**
 
  
@@ -103,19 +108,13 @@ Planned features :
 
 2. a networkD3::forceNetwork S3 class object named `'forcenetwork'`, an html interactive network dataviz'
 
-You should play with the parameters, e.g., coloring nodes depending on their outdegrees :
-
-     get_networkd3_from_igraph(netig, color_outdeg_instead_of_indeg = T) 
-
-![](man/figures/example_net3d_dataviz2.png)
+-->
 
 
-⏩ **5. Get metrics and identifying cascading dependancies of func'**
+
+⏩ *Get metrics and identifying problematic patterns (e.g., cascading dependancies of func')*
 
 Under construction [🔧🔨]
-
----
-There is several useful parameters to take care with. Depending on the languages you have to manage, you'll want to tweak the 'pattern' used for match a function definition.
 
 <!--
 > `codexplor` help you to manage and analyze a programming project, giving you tools to figure out the big picture and to find the little wrench in the (net)work. 
