--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ return("<style>
 
 🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
 
-`codexplor` offers R functions for explore and monitor a programming project with standardized methods : get immediate insights with text-mining metrics, network analysis & dataviz'. Get rid of complexity with a broader perspective on the project !
+`codexplor` offers R functions for explore and monitor a programming project : get immediate insights with text-mining metrics, network analysis & dataviz'. Get rid of complexity with a broader perspective on the project !
 
 ## Installation
 You can install the development version of codexplor with
@@ -38,16 +38,19 @@ devtools::install_github("clement-LVD/codexplor")
 ```
 
 ## Features
-Given a programming project with .R files :
+ ![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Citations Network of internal dependencies&labelColor=black&color=green)
+ 
+ Given a programming project with .R files :
 
-- Appreciate global complexity with a ![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Citations Network of internal dependencies&labelColor=black&color=green)
+- Appreciate global complexity with a **Citations Network of internal dependencies**
     - Get network metrics & dataviz' about the functions defined in the project (e.g. explore global structure or zoom on major internal dependancies^[functions that are called by others functions of the project]).
-- *[planned feature]* Assess local complexity with  ![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Text-mining metrics&labelColor=grey&color=yellow)
+- *[planned feature]* Assess local complexity with **Text-mining metrics**
   - Get document-level metrics (e.g., files readability)
 - ...
 
+ 
 Planned features : 
-
+ ![](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Text-mining metrics&labelColor=grey&color=orange)
 ![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Reporting&labelColor=orange&color=black)
 ![](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Network-advanced&labelColor=orange&color=black)
 
