--- a/vignettes/construct_a_corpus.Rmd
+++ b/vignettes/construct_a_corpus.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "constructing_a_corpus"
+title: "Turn a programming project into a corpus"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{constructing_a_corpus}
+  %\VignetteIndexEntry{Turn a programming project into a corpus}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -15,16 +15,16 @@ knitr::opts_chunk$set(
 ```
 
 # Constructing your corpus
-`codexplor` offering functions to turn a bunch of files from a programming project into a corpus : 
+`codexplor` offering functions to turn a bunch of files from a programming project into a corpus and filter it before to process an analysis. 
 
-- provide folder(s) path(s) and/or github repo(s), and one or several languages to `construct_corpus`
+You should provide folder(s) path(s) and/or github repo(s), and one or several languages to `construct_corpus`
 
     corpus <- codexplor::construct_corpus("~", "tidyverse/stringr", languages = "R")
     nrow(corpus); length(unique(corpus$matches)) # content + a 1st matched pattern
     
-- `construct_corpus` return the full content as a `df`. Some *1st matches* are realized : these 1st matches are the names of functions defined in the files of the project. Here, the user is not supposed to define several function in the same line (otherwise lines will be duplicated). 
+- `construct_corpus` return the full content as a `df`. Some *1st matches* are already realized since the names of functions defined in the files of the project are extracted in a column of the returned `df` (the user is not supposed to define several function in the same line, otherwise lines will be duplicated). 
 
-Indicating a language give `construct_corpus` a precise file extension and a match function definition accordingly : `construct_corpus` rely on a regex for each language, in order to match the functions names accordingly with standard of each language. Planned languages are :
+Indicating a language to `construct_corpus` is needed, e.g., in order to read the programming files accordingly to their extensions. In order to extract the "functions names", `construct_corpus` rely on a regex for each language. Planned languages are :
 
 - `r paste0(collapse = "<br>• ", names(codexplor::function_def_regex_by_language()))`
 
