--- a/vignettes/manage_igraph_object.Rmd
+++ b/vignettes/manage_igraph_object.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "manage_igraph_object"
+title: "Helper functions to create and filter igraph objects"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{manage_igraph_object}
+  %\VignetteIndexEntry{Helper functions to create and filter igraph objects}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -19,12 +19,12 @@ knitr::opts_chunk$set(
 
 Once you have a network such as a network of internal dependancies within a project (see `get_text_network_from_project`)
 
-- Turn your Citations Network into a directed `igraph`  network with ![1.](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get_igraph_from_df()&labelColor=green&color=black)
+- Turn your Citations Network into a directed `igraph`  network with ![wip](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=get_igraph_from_df()&labelColor=green&color=black)
 
         netig <- codexplor::get_igraph_from_df(net) 
         
 - Once you have an igraph object, zoom on a precise function with 
-![](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=filter_igraph_egonetwork()&labelColor=green&color=black)
+![wip](https://img.shields.io/badge/{igraph}-bold?style=flat&logoColor=black&logoSize=2&label=filter_igraph_egonetwork()&labelColor=green&color=black)
 
 
 
