--- a/vignettes/vignette_get_text_network_from_project.Rmd
+++ b/vignettes/vignette_get_text_network_from_project.Rmd
@@ -14,27 +14,50 @@ knitr::opts_chunk$set(
 )
 ```
 
-Assuming you have folder path(s) and/or public github repo(s) from a programming project, `codexplor::get_text_network_from_project` will compute a Citations Network of the *programming project(s)* :
+This vignette explain the network returned by `codexplor::get_text_network_from_project`. This function will compute a Citations Network of *programming project(s)*, from local folder path(s) and/or public github repo(s). This Vignette give a basic understanding of such a network.
 
-- the network is directed,
-- indegrees of a node is 'how many functions of the project uses this precise func'. 
+### Example
+For example, giving a bunch of .R project and/or repos :
+
+    net <- get_text_network_from_project(repos =  c("tidyverse/stringr", "clement-lvd/codexplor"))
+    # codexplor functions will deal with a R project by default
+    
+    # get an igraph object from this edgelist, and optionnaly filter it :
+    codexplor::get_igraph_from_df(net) 
+    
+    #get a networkD3 dataviz' from this edgelist :
+    get_networkd3_from_igraph(net)
+
+![.](man/figures/example_net3d_dataviz.png)
+
+**Network properties.**
+The returned network is a document-to-document Citations network. 
+
+Such a network have already a lot of mathematical properties that we don't cover here (e.g., a Citations Network is always a directed network).
+
+Regarding the network computed by `codexplor::get_text_network_from_project()` :
+
+- A node is one of the programming files (exclusively .R files by default). 
+- An edge is symbolizing a link from a file that calls a function to the file where the function is defined.
+
+Thus :
+
+- Indegrees of a node is 'how many functions of the project uses this func'. 
 - Outdegree of a node is "how many functions of the project are used by this precise function". 
 - ⟲ auto-mentioning typically reveal 'recursivity', once a func' call itself more than one times (1st mention is usually for define the func' name)
 
-Assuming the user have indicated folder(s) and/or github repo(s), `codexplor::get_text_network_from_project()` will :
+### Cascading matching operated
+`codexplor` default pattern are aimed to extract functions names from the files of a *programming* project.
+
+Assuming the user have indicated folder(s) and/or github repo(s), `codexplor::get_text_network_from_project()` will try to perform a 'cascading matching' :
 
 ⏩ Read the files, trying to extract a 1st pattern (e.g., defaults parameters will extract R functions names, when a func' is defined within a file). 
+
 ⏩ Search for these patterns (functions names by default) in the initial content, in order to constitute a Citations Network.
+
 🎁 Return the edgelist of the network of *documents* (i.e. files path with the 2nd match => files path with the 1st match [where the function is defined])
 
-For example, giving a bunch of .R codes files path and/or url :
-
-    net <- get_text_network_from_project(repos =  c("tidyverse/stringr", "clement-lvd/codexplor"), regex_to_exclude_files_path = "test-")
-    # these func' are tunned for detecting R func' by default
-    get_networkd3_from_igraph(codexplor::get_igraph_from_df(net) )
-
-For ex. we see that `codexplor` rely on `stringr` functions. The opposite is not true.
-
-There is sometimes a false positive nodes that need to be excluded from the network. Typical "false positive" matches are the lines where you use the name of another function in a message, e.g. `message("my_func() is deprecated. You should use this_function() instead)`. `get_text_network_from_files` offer several parameters for deal with your style of programming.
+### Filter undesired match
+Junk nodes needs to be excluded from the network. Typical "false positive" matches are the lines where you use the name of another function in a message, e.g. `message("my_func() is deprecated. You should use this_function() instead)`. `get_text_network_from_files` offer several parameters for deal with your style of programming.
 
 
